--- a/books/templates/books/includes/partial_book_update.html
+++ b/books/templates/books/includes/partial_book_update.html
@@ -7,7 +7,19 @@
     <h4 class="modal-title">Update book</h4>
   </div>
   <div class="modal-body">
-    {% include 'books/includes/partial_book_form.html' %}
+    
+    {% load widget_tweaks %}
+
+    {% for field in form %}
+      <div class="form-group{% if field.errors %} has-error{% endif %}">
+        <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+        {% render_field field class="form-control" %}
+        {% for error in field.errors %}
+          <p class="help-block">{{ error }}</p>
+        {% endfor %}
+      </div>
+    {% endfor %}
+
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
