--- a/mainpage/templates/doctor.html
+++ b/mainpage/templates/doctor.html
@@ -1,9 +1,7 @@
 {% extends "index1.html" %}
 {% load static %}
 
-{% block javascript %}
-  <script src="{% static 'mainpage/js/doctor.js' %}"></script>
-{% endblock %}
+
 {% load crispy_forms_tags %}
 {% load django_tables2 %}
 
@@ -46,17 +44,25 @@
         </div>
         {% endcomment %}
             <p />
+            
+              {% block javascript %}
+                <script src="{% static 'mainpage/js/books.js' %}"></script>
+              {% endblock %}
+
+              <p>
+                <button type="button" class="btn btn-primary js-create-book" data-url="{% url 'book_create' %}">
+                  <span class="glyphicon glyphicon-plus"></span>
+                  New book
+                </button>
+                <a class="collapse-item" href="{% url 'book_list1' %}">Book</a>
+              </p>
+
             <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
                 </div>
             <div class="card-body">
-              <p>
-                <button type="button" class="btn btn-primary js-create-doctor" data-url="{% url 'doctor_create' %}">
-                  <span class="glyphicon glyphicon-plus"></span>
-                  New book
-                </button>
-              </p>
+              
               <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                   <thead>
@@ -107,14 +113,8 @@
               </div>
             </div>
           </div>
-        {% comment %} </div> {% endcomment %}
-        <div class="modal fade" id="modal-doctor">
-    <div class="modal-dialog">
-      <div class="modal-content">
-
-      </div>
-    </div>
-  </div>
+        
+  
         <div class="card shadow mb-4">
             <div class="card-header py-3">
               <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
