--- a/CRUDAPP/templates/homepage.html
+++ b/CRUDAPP/templates/homepage.html
@@ -1,9 +1,9 @@
-{% comment %} {% load static %} {% endcomment %}
+{% load static %}
 <html>
 <head>
    
-    {% comment %} <link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css">
-    <link href="{%static 'css/bootstrap.min.css.map'%}" > {% endcomment %}
+    <link href="{%static 'css/bootstrap.min.css'%}" rel="stylesheet" type="text/css">
+    <link href="{%static 'css/bootstrap.min.css.map'%}" >
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -113,8 +113,8 @@
   </div>
 </div>
 
-{% comment %} <script src="{%static 'js/jquery.min.js'%}"></script>
-<script src="{% static 'js/bootstrap.min.js' %}"></script> {% endcomment %}
+<script src="{%static 'js/jquery.min.js'%}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
     
 <script>
     $(".btn-insert-data").click(function(){
