--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -34,33 +34,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for book in books %}
-        <tr>
-          <td>{{ book.id }}</td>
-          <td>{{ book.frist_name }}</td>
-          <td>{{ book.last_name }}</td>
-          <td>{{ book.phone }}</td>
-          <td>{{ book.date_entry }}</td>
-          <td>{{ book.phone }}</td>
-          <td>{{ book.phone }}</td>
-          <td style="width: 150px">
-            <button type="button"
-                    class="btn btn-warning btn-sm js-update-book"
-                    data-url="{% url 'book_update' book.id %}">
-              <span class="glyphicon glyphicon-pencil"></span> Edit
-            </button>
-            <button type="button"
-                    class="btn btn-danger btn-sm js-delete-book"
-                    data-url="{% url 'book_delete' book.id %}">
-              <span class="glyphicon glyphicon-trash"></span> Delete
-            </button>
-          </td>
-        </tr>
-      {% empty %}
-        <tr>
-          <td colspan="8" class="text-center bg-warning">No book</td>
-        </tr>
-      {% endfor %}
+      {% include 'books/includes/partial_book_list.html' %}
     </tbody>
   </table>
 
