--- a/templates/index1.html
+++ b/templates/index1.html
@@ -76,6 +76,7 @@
             <a class="collapse-item" href="{% url 'secertary' %}">Buttons</a>
             <a class="collapse-item" href="{% url 'home' %}">Cards</a>
             <a class="collapse-item" href="{% url 'maapp' %}">Member</a>
+            <a class="collapse-item" href="{% url 'note' %}">Note</a>
           </div>
         </div>
       </li>
